# DemoEngine

./: .gitignore  CMakeLists.txt  Doxyfile
resources/: GUI.vert  Thumbs.db  VertexShader.txt  alphaCheck.frag  light.frag  lightkeypass.frag  lit.frag  lit.vert  mergepass.frag  noisepass.frag  simple.frag  simple.vert  texCoord.frag  textured+texCoord.frag  textured.frag  textured.vert  textured_B&W.frag  textured_lit.frag  textured_lit.vert  vignettepass.frag
src/game/: CameraController.cpp  CameraController.h  EnemyController.cpp  EnemyController.h  GameController.cpp  GameController.h  Move.cpp  Move.h  PostProcess_B&W.cpp  PostProcess_B&W.h  PostProcess_Bloom.cpp  PostProcess_Bloom.h  PostProcess_Blur.cpp  PostProcess_Blur.h  PostProcess_LightKey.cpp  PostProcess_LightKey.h  PostProcess_Noise.cpp  PostProcess_Noise.h  PostProcess_Vignette.cpp  PostProcess_Vignette.h  main.cpp
src/myengine/: Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Constants.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Enviroment.cpp  Enviroment.h  GL_Triangle.cpp  GL_Triangle.h  GUI.cpp  GUI.h  Keyboard.cpp  Keyboard.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Mouse.cpp  Mouse.h  Move.cpp  Move.h  PostProcess.cpp  PostProcess.h  Ray.cpp  Ray.h  RenderTexture.cpp  RenderTexture.h  RigidBody.cpp  RigidBody.h  ShaderProgram.cpp  ShaderProgram.h  Sound.cpp  (+15 more)
src/resources/: FragmentShader.txt  VertexShader.txt
